WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
179780
AX: VoiceOver in Safari does not read table header for first cell in first body row
https://bugs.webkit.org/show_bug.cgi?id=179780
Summary
AX: VoiceOver in Safari does not read table header for first cell in first bo...
chris fleizach
Reported
2017-11-16 09:46:48 PST
Summary: When using VoiceOver in Safari to read a HTML table, the column header (th) is not read for the first cell in the first row Steps to Reproduce: Given this HTML markup: <table> <thead> <tr> <th>Morning</th> <th>Afternoon</th> </tr> </thead> <tbody> <tr> <td>Free</td> <td>Busy</td> </tr> </tbody> </table> * Turn VoiceOver on * Swipe to each item in the table Expected Results: VoiceOver should read: * "Morning. Row One. Column 1. Column Start. Two Columns." * "Afternoon. Column 2." * "Morning, Free. Row Two. Column 1." * "Afternoon, Busy. Table End." Actual Results: VoiceOver reads: * "Morning. Row One. Column 1. Column Start. Two Columns." * "Afternoon. Column 2." * "Free. Row Two. Column 1." * "Afternoon, Busy. Table End." Version/Build: iOS 11.0 <
rdar://problem/34711324
>
Attachments
patch
(4.54 KB, patch)
2017-11-16 09:49 PST
,
chris fleizach
buildbot
: commit-queue-
Details
Formatted Diff
Diff
Archive of layout-test-results from ews101 for mac-elcapitan
(2.15 MB, application/zip)
2017-11-16 10:47 PST
,
Build Bot
no flags
Details
Archive of layout-test-results from ews104 for mac-elcapitan-wk2
(2.61 MB, application/zip)
2017-11-16 10:57 PST
,
Build Bot
no flags
Details
Archive of layout-test-results from ews116 for mac-elcapitan
(2.89 MB, application/zip)
2017-11-16 11:19 PST
,
Build Bot
no flags
Details
patch
(6.69 KB, patch)
2017-11-16 13:43 PST
,
chris fleizach
jdiggs
: review+
Details
Formatted Diff
Diff
Rebaseline table-attributes.html results for WebKitGtk+
(1.71 KB, patch)
2017-11-17 14:43 PST
,
Joanmarie Diggs
no flags
Details
Formatted Diff
Diff
patch for landing
(8.10 KB, patch)
2017-11-17 14:48 PST
,
chris fleizach
no flags
Details
Formatted Diff
Diff
patch for landing
(8.10 KB, patch)
2017-11-17 14:49 PST
,
chris fleizach
no flags
Details
Formatted Diff
Diff
Show Obsolete
(7)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2017-11-16 09:47:05 PST
<
rdar://problem/35590551
>
chris fleizach
Comment 2
2017-11-16 09:49:57 PST
Created
attachment 327071
[details]
patch
Build Bot
Comment 3
2017-11-16 10:47:03 PST
Comment on
attachment 327071
[details]
patch
Attachment 327071
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.webkit.org/results/5260741
New failing tests: accessibility/table-attributes.html
Build Bot
Comment 4
2017-11-16 10:47:04 PST
Created
attachment 327082
[details]
Archive of layout-test-results from ews101 for mac-elcapitan The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews101 Port: mac-elcapitan Platform: Mac OS X 10.11.6
Build Bot
Comment 5
2017-11-16 10:57:45 PST
Comment on
attachment 327071
[details]
patch
Attachment 327071
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.webkit.org/results/5260819
New failing tests: accessibility/table-attributes.html
Build Bot
Comment 6
2017-11-16 10:57:46 PST
Created
attachment 327084
[details]
Archive of layout-test-results from ews104 for mac-elcapitan-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews104 Port: mac-elcapitan-wk2 Platform: Mac OS X 10.11.6
Build Bot
Comment 7
2017-11-16 11:19:51 PST
Comment on
attachment 327071
[details]
patch
Attachment 327071
[details]
did not pass mac-debug-ews (mac): Output:
http://webkit-queues.webkit.org/results/5260828
New failing tests: accessibility/table-attributes.html
Build Bot
Comment 8
2017-11-16 11:19:53 PST
Created
attachment 327086
[details]
Archive of layout-test-results from ews116 for mac-elcapitan The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews116 Port: mac-elcapitan Platform: Mac OS X 10.11.6
chris fleizach
Comment 9
2017-11-16 13:43:19 PST
Created
attachment 327103
[details]
patch
Joanmarie Diggs
Comment 10
2017-11-17 14:43:42 PST
Created
attachment 327243
[details]
Rebaseline table-attributes.html results for WebKitGtk+ Chris: The attached patch contains the updated text expectations for table-attributes.html for WebKitGtk. If it's easy enough to land your patch with these changes included, that would be appreciated. If not, we'll do it as part of gardening.
chris fleizach
Comment 11
2017-11-17 14:45:23 PST
(In reply to Joanmarie Diggs (irc: joanie) from
comment #10
)
> Created
attachment 327243
[details]
> Rebaseline table-attributes.html results for WebKitGtk+ > > Chris: The attached patch contains the updated text expectations for > table-attributes.html for WebKitGtk. If it's easy enough to land your patch > with these changes included, that would be appreciated. If not, we'll do it > as part of gardening.
awesome! incorporating now
chris fleizach
Comment 12
2017-11-17 14:48:24 PST
Created
attachment 327245
[details]
patch for landing
chris fleizach
Comment 13
2017-11-17 14:49:22 PST
Created
attachment 327246
[details]
patch for landing
WebKit Commit Bot
Comment 14
2017-11-17 15:44:19 PST
Comment on
attachment 327246
[details]
patch for landing Clearing flags on attachment: 327246 Committed
r224997
: <
https://trac.webkit.org/changeset/224997
>
WebKit Commit Bot
Comment 15
2017-11-17 15:44:21 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug