AX: VoiceOver in Safari does not read table header for first cell in first body row https://bugs.webkit.org/show_bug.cgi?id=179780 <rdar://problem/35590551>

Reviewed by Joanmarie Diggs.

Source/WebCore:

A table cell shouldn't be considered a row header if it's in a row of other headers.

Test: accessibility/table-header-calculation-for-header-rows.html

* accessibility/AccessibilityTableRow.cpp:
(WebCore::AccessibilityTableRow::headerObject):

LayoutTests:

* accessibility/table-header-calculation-for-header-rows-expected.txt: Added.
* accessibility/table-header-calculation-for-header-rows.html: Added.
* accessibility/table-attributes-expected.txt: Updated.
* platform/gtk/accessibility/table-attributes-expected.txt: Updated.


Canonical link: https://commits.webkit.org/195866@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@224997 268f45cc-cd09-0410-ab3c-d52691b4dbfc